--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.28.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
 
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8'
