--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -52,6 +53,10 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.28.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
+
+    def nav_version = "2.3.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8'
